# audio-separator-demucs-mdx

./: .gitignore  COMMANDS.md  compress_audio.py  detect_wav.mjs  fix_wav.mjs  fix_wav.py  job_worker.py  pyproject.toml  requirements.txt  test_multipart_upload.py
demucs_separator/: __init__.py  app.py  run.py
